--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:visibility="visible"
+    tools:context=".MainActivity"
+    tools:visibility="visible">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Redes de Wi-Fi Disponível"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
         android:fontFamily="@font/poppinsbold"
-        android:textColor="@color/colorAccent"
         android:gravity="center"
-        android:textSize="30sp"
-        android:layout_marginTop="20dp"
-        android:textAlignment="center" />
+        android:text="@string/redes_de_wi_fi_dispon_vel"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="30sp" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_margin="20dp"
-        android:id="@+id/myListView" />
+        android:id="@+id/myListView"
 
-</LinearLayout>
+        android:layout_width="366dp"
+        android:layout_height="661dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginBottom="20dp"
+        android:visibility="visible"
+        tools:listitem="@layout/support_simple_spinner_dropdown_item"
+        tools:visibility="visible" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
