--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <TextView
+        android:id="@+id/txtWifiName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txtWifiName"
-        android:textSize="20sp"
-        android:textColor="#2C2C2C"
+        android:clickable="true"
         android:padding="10dp"
-        />
+        android:text="tetteetet"
+        android:textColor="#2C2C2C"
+        android:textSize="20sp"
+        android:visibility="visible"
+        tools:visibility="visible" />
 </RelativeLayout>
